Pagina de Home terminado pero no del todo responsive y pequeños avances en la seccion de visualizar todas las bebidas

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,4 +1,13 @@
-body{
-    background: linear-gradient(to top left, #FF5F6D 0%, #28222D 50%) !important;
+*{
+    font-family: "Playfair Display", serif;
+}
+body {
+    background: 
+        url('../icons/bg-final.svg'),
+        linear-gradient(to top left, #FF5F6D 0%, #28222D 50%);
+    background-repeat: no-repeat;
+    background-size: cover; /* Adjusts the image size to cover the screen */
+    background-position: center;
     height: 100vh;
+    border: 1px solid red;
 }
