--- a/src/assets/styles/components/cardBebida.css
+++ b/src/assets/styles/components/cardBebida.css
@@ -1,4 +1,4 @@
-
+/* 
 .card-bebida__overlay {
     position: fixed;
     top: 0;
@@ -8,5 +8,5 @@
     background: rgba(0, 0, 0, 0.5);
 }
 
-
+ */
 
