--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -3,11 +3,11 @@
 }
 body {
     background: 
-        url('../icons/bg-final.svg'),
+        /* url('../icons/bg-final.svg'), */
         linear-gradient(to top left, #FF5F6D 0%, #28222D 50%);
     background-repeat: no-repeat;
     background-size: cover; /* Adjusts the image size to cover the screen */
     background-position: center;
     height: 100vh;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
