--- a/src/assets/styles/components/cardBebida.css
+++ b/src/assets/styles/components/cardBebida.css
@@ -1,12 +1,62 @@
-/* 
-.card-bebida__overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+.card-bebida {
+    width: 13rem;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    position: relative;
+    border: none;
 }
 
- */
+.card-bebida__image {
+    object-fit: cover;
+    height: 100%;
+}
 
+.card-bebida__icon-container {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    background: linear-gradient(90deg, #D4AF37, #F2E494, #B8860B);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 2;
+    border: none;
+}
+
+.prueba{
+    background-color: rgba(255, 255, 255, 0.3); /* Fondo blanco translúcido */
+    backdrop-filter: blur(10px); /* Aplica el desenfoque */
+    padding-top: 10px;
+}
+.card-bebida__overlay-text {
+    text-align: center;
+}
+
+.card-title {
+    font-size: 1rem;
+    font-weight: bold;
+    margin: 0;
+}
+
+.card-bebida__button {
+    background: linear-gradient(90deg, #D4AF37, #F2E494, #B8860B);
+    border-radius: 40px;
+    color: #000000;
+    padding: 5px 18px;
+    margin: 10px auto;
+    display: block;
+    width: fit-content;
+    position: relative;
+    z-index: 2;
+    transition: transform 0.2s;
+
+}
+.card-bebida__button:hover{
+    transform: scale(1.05);
+    color: #000000;
+}
