--- a/src/assets/styles/allDrinks.css
+++ b/src/assets/styles/allDrinks.css
@@ -6,6 +6,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     overflow: auto;
+    scrollbar-width: none;
 }
 .drinks-title{
     font-size: 1.8rem;
