--- a/src/assets/styles/components/modal.css
+++ b/src/assets/styles/components/modal.css
@@ -7,37 +7,52 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.5); 
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1000;
 }
 
 .modal__container {
-    background: #fff;
+    background: #fdfdfdda;
     padding: 20px;
     border-radius: 8px;
-    max-width: 400px;
+    max-width: 600px;
     width: 90%;
     position: relative;
+    box-shadow: 0 4px 6px rgba(253, 75, 75, 0.5);
+    z-index: 1001;
+}
+
+.modal__content {
+    max-height: 60vh;
+    overflow-y: auto; 
+    padding: 10px;
+    margin-bottom: 16px;
 }
 
 .modal__header {
     margin-bottom: 16px;
+    color: #28222D;
 }
 
 .modal__title {
+    position: relative;
     font-size: 1.5rem;
     margin: 0;
-}
-
-.modal__content {
-    margin-bottom: 16px;
+    color: #FF5F6D; 
 }
 
 .modal__level, .modal__info {
     font-size: 1rem;
-    color: #666;
+    color: #28222D;
+}
+
+.modal-hoja__icon {
+    width: 20px;
+    height: 20px;
+    filter: invert(29%) sepia(78%) saturate(7461%) hue-rotate(346deg) brightness(101%) contrast(107%);
 }
 
 .modal__footer {
@@ -54,11 +69,16 @@
 }
 
 .modal__button--close {
-    background-color: #ddd;
-    color: #333;
+    background: linear-gradient(50deg, #D4AF37, #F2E494, #B8860B);
+    color: #030105; 
 }
 
 .modal__button--favorite {
-    background-color: #f04;
+    background-color: #FF5F6D;
     color: #fff;
+    font-weight: bold;
+}
+
+.divImgModal{
+    text-align: center;
 }
