--- a/src/assets/styles/customStyles.css
+++ b/src/assets/styles/customStyles.css
@@ -9,14 +9,14 @@
   
   .custom-container {
     max-width: 900px;
-    padding: 0 20px;
+    padding: 0 15px;
   }
   
   .custom-card {
     background-color: transparent;
     border: 2px solid rgba(255, 255, 255, 0.5);
     border-radius: 20px;
-    padding: 60px 40px;
+    padding: 60px 30px;
     position: relative;
     text-align: center;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
@@ -31,7 +31,8 @@
   }
   
   .select-group {
-    width: 160px;
+    width: 180px;
+    margin: 10px;
     text-align: left;
     color: white;
   }
