--- a/src/assets/styles/components/modal.css
+++ b/src/assets/styles/components/modal.css
@@ -7,8 +7,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); 
-    display: flex;
+    background-color: transparent !important;
+    backdrop-filter: blur(5px) !important;    display: flex;
     align-items: center;
     justify-content: center;
     z-index: 1000;
@@ -19,10 +19,10 @@
     padding: 20px;
     border-radius: 8px;
     max-width: 600px;
+    height: 90%;
     width: 90%;
-    position: relative;
     box-shadow: 0 4px 6px rgba(253, 75, 75, 0.5);
-    z-index: 1001;
+    overflow-y: auto;
 }
 
 .modal__content {
@@ -57,11 +57,11 @@
 
 .modal__footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .modal__button {
-    padding: 8px 12px;
+    padding: 8px 25px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -73,12 +73,17 @@
     color: #030105; 
 }
 
-.modal__button--favorite {
-    background-color: #FF5F6D;
-    color: #fff;
-    font-weight: bold;
-}
-
 .divImgModal{
     text-align: center;
+    border-radius: 8px; 
+    margin-top: 5px; 
+    margin-bottom: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+.img-drink{
+    width: 40%;
 }
