--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover; 
     background-position: center;
-    height: 100%;
+    height: 100vh;
 }
 
 @media (max-width: 990px) {
