--- a/src/assets/styles/header.css
+++ b/src/assets/styles/header.css
@@ -1,9 +1,6 @@
 
 .header{
-    /* padding-top: 0.6rem;
-    padding-bottom: 0.8rem; */
     color: white !important;
-    margin-top: 0.5% !important; 
 }
 .header-title {
     background: linear-gradient(90deg, #D4AF37 0%, #F2E494 50%, #B8860B 100%);
@@ -20,7 +17,7 @@
 }
 .button-gradient {
     background: linear-gradient(90deg, #D4AF37 0%, #F2E494 50%, #B8860B 100%);
-    color: black; /* Darker color for text */
+    color: black; 
     font-size: 2.3vh;
     font-weight: 500;
     border: none;
@@ -49,9 +46,4 @@
 
 .header-glass{
     width: 100%;
-}
-@media (max-width: 1148px) {
-    header{
-        /* margin-top: 3.5% !important; */
-    }
 }
